fix scrollbar for server nav bar

--- a/Strife/app/assets/stylesheets/api/server_nav_bar.scss
+++ b/Strife/app/assets/stylesheets/api/server_nav_bar.scss
@@ -33,7 +33,9 @@
   overflow-x: hidden;
   overflow-y: auto;
   // height: calc(100vh-55px);
-  height: auto;
+  // height: auto;
+  // height:--webkit-fill-avaliable
+  height: Calc(100vh - 55px);
   // height: calc(auto-55px);
 
 }
